--- a/othercsspages/downloadapp.css
+++ b/othercsspages/downloadapp.css
@@ -861,6 +861,28 @@ ul{
   .question-text h2{
     font-size: 2em;
   }
+  /* ==============footer1=========== */
+    .footer-accordion{
+        flex-wrap: wrap;
+    }
+    .footer-menu{
+        width: 140px;
+    }
+    .footer-menu p{
+        font-size: 1em;
+    }
+    .footer-list p a{
+        font-size: 0.8em;
+    }
+    .footer-list{
+        padding-bottom: 40px;
+    }
+    .support-bold{
+        font-size: 1.6em;
+    }
+    .support-small{
+        font-size: 0.8em;
+    }
 }
 
 
