reduced font size

--- a/index.css
+++ b/index.css
@@ -1208,7 +1208,7 @@ ul{
     .big{
         font-size: 1.2em;
         margin-bottom: 10px;
-        padding-top: 80px;
+        padding-top: 100px;
     }
     .small{
         font-size: 0.8em;
@@ -1399,10 +1399,15 @@ ul{
     .btn1,.btn2{
         width: 100%;
     }
+    .section-3{
+        padding: 30px 0;
+    }
+    .logo-carousel {
+        margin-top: 10px;
+    }
     .blue-recs{
         flex-direction: column;
         gap: 2em;
-        
     }
     .rec1, .rec2{
         width: 94%;
@@ -1447,11 +1452,44 @@ ul{
     .use-case{
         font-size: 1.6em;
     }
-    .sets-h2{
-        font-size: 1.6em;
+    .sets-asana-apart h2{
+        font-size: 1.8em;
     }
-    .top-companies-big h2{
+    .bigtext-rec1, .bigtext-rec2{
+        font-size: 1em;
+    }
+    .smalltext-rec1, .smalltext-rec2{
+        font-size: 0.8em;
+        margin-bottom: 40px;
+    }
+    .connect-small p{
+        font-size: 1em;
+        margin-bottom: 0;
+    }
+    .top-companies .top-companies-big h2{
+        font-size: 1.8em;
+    }
+    .connect-text .connect-big h2{
+        font-size: 1.8em;
+    }
+    .comment-legible, .comment2-legible, .comment3-legible, .comment4-legible{
         font-size: 1.4em;
+    }
+    .comment1-btn, .comment2-btn, .comment3-btn, .comment4-btn{
+        margin-top: 40px;
+    }
+    .get-started-left h1{
+        font-size: 1.8em;
+    }
+    .get-started-left p{
+        font-size: 1em;
+        margin-bottom: 0;
+    }
+    .get-started-left{
+        padding-bottom: 0;
+    }
+    .text-arrowright1, .text-arrowright2, .text-arrowright3{
+        padding-top: 0;
     }
 
     .leader-card {
@@ -1495,22 +1533,8 @@ ul{
     .big{
         font-size: 1em;
     }
-    .sets-h2{
-        font-size: 2.2em;
-    }
-    .connect-big h2{
-        font-size: 2.2em;
-        margin-top: 60px;
-    }
-    .top-companies-big h2{
-        font-size: 2.2em;
-        padding-top: 40px;
-    }
-    .get-started-left h1{
-        font-size: 2.2em;
-    }
     .support-bold{
-        font-size: 2.2em;
+        font-size: 1em;
         margin-bottom: 20px;
     }
     .support-small{
