--- a/othercsspages/goals-reporting.css
+++ b/othercsspages/goals-reporting.css
@@ -266,7 +266,7 @@ ul{
 }
 
 .big{
-    padding-top: 220px;
+    padding-top: 140px;
     font-size: 1.6em;
     text-align: center;
     color: #690031;
@@ -1347,13 +1347,43 @@ ul{
 }
 
 @media (max-width: 576px) {
+    .big{
+        padding-top: 100px;
+    }
+    .small{
+        font-size: 0.8em;
+    }
     .full{
         width: 100%;
+    }
+    .grid-text h1{
+        font-size: 1.8em;
+    }
+    .grid-text p{
+        font-size: 1em;
+    }
+    .sync-text h1{
+        font-size: 1.8em;
+    }
+    .sync-text p{
+        font-size: 1em;
+    }
+    .deeper h1{
+        font-size: 1.8em;
+    }
+    .deeper p{
+        font-size: 1em;
     }
   .container {
     flex-direction: column;   
     align-items: center;
     gap: 1.5em;
+  }
+  .transform h1{
+    font-size: 1.8em;
+  }
+  .question-text h2{
+    font-size: 1.8em;
   }
 
   .card {
